:construction: Rework vote reward